@@ -45,6 +45,15 @@
 -->
 
     <listitem>
+      <para>September 19th, 2014</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Update haveged bootscript.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>September 18th, 2014</para>
       <itemizedlist>
         <listitem>
