@@ -36,7 +36,7 @@
     program if you encounter an ed-based patch file. This happens rarely
     because diff-based patches are preferred these days.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
@@ -64,7 +64,7 @@
 
     <bridgehead renderas="sect4">Required to uncompress the tarball</bridgehead>
     <para role="required">
-      <xref linkend="libarchive"/>
+      <xref linkend="libarchive"/> (for bsdtar)
     </para>
 
     <para condition="html" role="usernotes">User Notes:
