@@ -32,7 +32,7 @@
     <para>The <application>Emacs</application> package contains an extensible,
     customizable, self-documenting real-time display editor.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
