@@ -33,7 +33,7 @@
     editor capable of emulating WordStar, <application>Pico</application>,
     and <application>Emacs</application>.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
