@@ -35,7 +35,7 @@
       the default editor in the <application>Pine</application> package.
     </para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
