@@ -32,7 +32,7 @@
     <para>The <application>jfsutils</application> package contains administration
     and debugging tools for the jfs file system.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
