@@ -33,7 +33,7 @@
     <para>The <application>reiserfsprogs</application> package contains various
     utilities for use with the Reiser file system.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
