@@ -39,7 +39,7 @@
     inserted. Here, we choose Damien Miller's package distributed in the
     <application>OpenSSH</application> tarball.</para>
 
-  &lfs75_checked;
+  &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
