@@ -38,7 +38,7 @@
     SMTP and HTTP, and in tunneling PPP over network sockets without changes
     to the server package source code.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
