@@ -32,7 +32,7 @@
     <para>The <application>Tripwire</application> package contains programs
     used to verify the integrity of the files on a given system.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
