@@ -37,7 +37,7 @@
     failure. <application>Dash</application> is also useful for checking that
     a script is completely compatible with POSIX syntax.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
