@@ -36,7 +36,7 @@
     and also because some programs require the C shell in order to perform
     installation tasks.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
