@@ -38,7 +38,7 @@
     <application>zsh</application> most closely resembles
     <application>ksh</application> but includes many enhancements.</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
