@@ -33,7 +33,7 @@
     for Linux on x86 hardware containing virtualization extensions (Intel VT or
     AMD-V).</para>
 
-    &lfs75_checked;
+    &lfs76_checked;
 
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
